--- a/testing_CV.Rmd
+++ b/testing_CV.Rmd
@@ -755,6 +755,6 @@ PubMed[i]<-paste0(i, ". ", test_pub_med$Authors[i], " ", "(", test_pub_med$Publi
 
 # PubMed <- as.list(PubMed)
 data.frame(PubMed) %>% 
- knitr:: kable("pipe", col.names = "")
+ knitr:: kable("pipe", row.names = " ", col.names = "")
 
 ```
