change to ISRCAP

--- a/testing_CV.Rmd
+++ b/testing_CV.Rmd
@@ -148,10 +148,10 @@ Anna Freud Centre
 
 **Presidency of International Organization**
 
-  - President of the [International Society for
+  - Past President of the [International Society for
     Research in Child and Adolescent Psychopathology
     (ISRCAP)](https://isrcap.org/executive-committee.html)
-    Amongst other responsibilities, I am tasked with the organisation of the 2023 Conference of the Organsisation that is going to happen in London in June 2023.
+    
     
 **Chair of Government Committee**  
 
